--- a/index.html
+++ b/index.html
@@ -3,15 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts CDN Link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
     <title>Uprint | About Page</title>
+    <!-- Font Awesome CDN Link -->
+    <script src="https://kit.fontawesome.com/6d07efe875.js" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS CDN Link -->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
     <!-- Style Sheet Link -->
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header Section -->
-    <header>
-
+    <header class="p-5">
+        <section class="d-flex justify-content-end">
+            <nav>
+                <button class="btn btn-outline-primary">Login</button>
+                <button class="btn btn-outline-dark">Sign Up</button>
+            </nav>
+        </section>
+        <section class="container-lg container-fluid d-flex flex-lg-row flex-column justify-content-between align-items-center my-5">
+            <div>
+                <img class="img-fluid w-75" src="images/uprint_logo.png" alt="">
+                <h2 id="header-title">A Cloud Based Printing System</h2>
+                <button class="btn primary-button mt-2 mb-2">Explore <i class="fa-solid fa-arrow-right ml-3"></i></button>
+            </div>
+            <div class="mt-3">
+                <img class="img-fluid" src="images/screens.png" alt="">
+                <p class="text-center mt-3"><span>www.uprintbd.com</span></p>
+            </div>
+        </section>
     </header>
     <!-- Header Section -->
 
@@ -23,8 +49,14 @@
 
     <!-- Footer Section -->
     <footer>
-        
+
     </footer>
     <!-- Footer Section -->
+
+    <!-- Bootstrap JS Link -->
+
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
 </html>
