uprint intro added

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <header class="p-5">
         <section class="d-flex justify-content-end">
             <nav>
-                <button class="btn btn-outline-primary">Login</button>
-                <button class="btn btn-outline-dark">Sign Up</button>
+                <a class="text-decoration-none" href="https://uprintbd.com/login"><button class="btn btn-outline-primary">Login</button></a>
+                <a class="text-decoration-none" href="https://uprintbd.com/register/"><button class="btn btn-outline-dark">Sign Up</button></a>
             </nav>
         </section>
-        <section class="container-lg container-fluid d-flex flex-lg-row flex-column justify-content-between align-items-center my-5">
+        <section class="container-sm container-fluid d-flex flex-lg-row flex-column-reverse justify-content-between align-items-center my-5">
             <div>
                 <img class="img-fluid w-75" src="images/uprint_logo.png" alt="">
                 <h2 id="header-title">A Cloud Based Printing System</h2>
@@ -43,7 +43,24 @@
 
     <!-- Main Section -->
     <main>
-
+        <!-- Uprint Intoduction Section -->
+        <section class="container">
+            <div class="d-flex align-items-center justify-content-center">
+                <div class="w-50">
+                    <img class="img-fluid w-75 rounded" src="images/full-setup-image.jpg" alt="">
+                </div>
+                <div>
+                    <h1 id="uprint-title">UPRINT</h1>
+                    <h4>Printing Made Simple</h4>
+                    <p>A cloud based printing solution that enables users to print from any nearby uprint kiosk.</p>
+                    <div>
+                        <a class="text-decoration-none" href="https://uprintbd.com/login"><button class="btn btn-dark">Login</button></a>
+                        <a class="text-decoration-none" href="https://uprintbd.com/register/"><button class="btn btn-dark">Sign Up</button></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Uprint Intoduction Section -->
     </main>
     <!-- Main Section -->
 
