features section added & intro section made responsive

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <main>
         <!-- Uprint Intoduction Section -->
         <section class="container">
-            <div class="d-flex align-items-center justify-content-center">
-                <div class="w-50">
-                    <img class="img-fluid w-75 rounded" src="images/full-setup-image.jpg" alt="">
+            <div class="d-flex flex-lg-row flex-column align-items-center justify-content-center">
+                <div class="setup-img">
+                    <img class="img-thumbnail rounded" src="images/full-setup-image.jpg" alt="">
                 </div>
                 <div>
-                    <h1 id="uprint-title">UPRINT</h1>
+                    <h1 class="uprint-title">UPRINT</h1>
                     <h4>Printing Made Simple</h4>
                     <p>A cloud based printing solution that enables users to print from any nearby uprint kiosk.</p>
                     <div>
@@ -61,6 +61,81 @@
             </div>
         </section>
         <!-- Uprint Intoduction Section -->
+
+        <!-- Features Section -->
+        <section class="container features-section">
+            <div class="mb-lg-3 mb-2">
+                <h1 class="features-title text-center">Features</h1>
+            </div>
+
+            <div>
+                <div>
+                    <div class="row row-cols-1 row-cols-md-3">
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/features/self-service.svg" class="card-img-top" alt="Self Service Printing Kiosks">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Self Service Printing Kiosks</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/features/secure-cloud.png" class="card-img-top" alt="Secured Cloud Server">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Secured Cloud Server</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/features/connect-any-printer.png" class="card-img-top" alt="Can Connect with any printer">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Can Connect with any printer</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/features/online-payment.png" class="card-img-top" alt="Online Payment">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Online Payment</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/features/dedicated-web-app.png" class="card-img-top" alt="Dedicated Web & Mobile App">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Dedicated Web & Mobile App</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/features/extensive-outlet.png" class="card-img-top" alt="Extensive Outlet Facilitiy">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Extensive Outlet Facilitiy</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Features Section -->
     </main>
     <!-- Main Section -->
 
