benefits section added

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <!-- Uprint Intoduction Section -->
 
         <!-- Features Section -->
-        <section class="container features-section">
+        <section class="container segment-section">
             <div class="mb-lg-3 mb-2">
-                <h1 class="features-title text-center">Features</h1>
+                <h1 class="section-title text-center">Features</h1>
             </div>
 
             <div>
@@ -128,6 +128,71 @@
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Extensive Outlet Facilitiy</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Features Section -->
+
+        <!-- Benefits Section -->
+        <section class="container segment-section">
+            <div class="mb-lg-3 mb-2">
+                <h1 class="section-title text-center">Benefits</h1>
+            </div>
+
+            <div>
+                <div>
+                    <div class="row row-cols-1 row-cols-md-3">
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/benefits/printer-placed.jpeg" class="card-img-top" alt="Can be placed at any place">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Can be placed at any place</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="img-thumbnail">
+                                    <img src="images/benefits/secure-file-system.png" class="card-img-top" alt="Secured File System">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Secured File System</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="img-thumbnail">
+                                    <img src="images/benefits/time-saving.png" class="card-img-top" alt="Save lots of time">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Save lots of time</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/benefits/easy-to-use.png" class="card-img-top" alt="Easy to use">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Easy to use</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col mb-4">
+                            <div class="card h-100">
+                                <div class="p-4 img-thumbnail">
+                                    <img src="images/benefits/reports.webp" class="card-img-top" alt="Daily Insights">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Daily Insights</h5>
                                 </div>
                             </div>
                         </div>
