how it works section added

--- a/index.html
+++ b/index.html
@@ -200,7 +200,61 @@
                 </div>
             </div>
         </section>
-        <!-- Features Section -->
+        <!-- Benefits Section -->
+
+        <!-- How It Works Section -->
+        <section class="container segment-section">
+            <div class="mb-lg-3 mb-2">
+                <h1 class="section-title text-center">How It Works</h1>
+            </div>
+
+            <div class="d-flex flex-lg-row flex-column">
+                <div class="d-flex flex-lg-row flex-column justify-content-center align-items-center works-custom">
+                    <div class="card h-100">
+                        <div class="img-thumbnail">
+                            <img src="images/works/file-upload.png" class="card-img-top" alt="User Uploads File Image">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">User uploads file and Customize according to printing needs (pages, copies etc)</h5>
+                        </div>
+                    </div>
+                    <i class="fa-solid fa-right-long fa-2xl icon"></i>
+                </div>
+                <div class="d-flex flex-lg-row flex-column justify-content-center align-items-center works-custom">
+                    <div class="card h-100">
+                        <div class="img-thumbnail">
+                            <img src="images/works/customization.png" class="card-img-top" alt="Get the cost and OTP">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Gets the cost estimate and OTP</h5>
+                        </div>
+                    </div>
+                    <i class="fa-solid fa-right-long fa-2xl icon"></i>
+                </div>
+                <div class="d-flex flex-lg-row flex-column justify-content-center align-items-center works-custom">
+                    <div class="card h-100">
+                        <div class="img-thumbnail">
+                            <img id="press-otp-img" src="images/works/press-otp.png" class="card-img-top" alt="Print OTP to nearby Kiosk">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">User goes to nearby kiosks and press OTP</h5>
+                        </div>
+                    </div>
+                    <i class="fa-solid fa-right-long fa-2xl icon"></i>
+                </div>
+                <div class="d-flex flex-lg-row flex-column justify-content-center align-items-center works-custom">
+                    <div class="card h-100">
+                        <div class="img-thumbnail">
+                            <img src="images/works/get-print.png" class="card-img-top" alt="Get the print">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">User gets the print</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- How It Works Section -->
     </main>
     <!-- Main Section -->
 
