how to use section with YT video link added

--- a/index.html
+++ b/index.html
@@ -255,6 +255,19 @@
             </div>
         </section>
         <!-- How It Works Section -->
+
+        <!-- How To Use Section -->
+        <section class="container segment-section">
+            <div class="bg-black p-5">
+                <div>
+                    <h1 class="section-title text-center">Let's see how to use</h1>
+                </div>
+                <div class="text-center">
+                    <iframe class="yt-frame" src="https://www.youtube.com/embed/lZGp53G5Gxk?si=DBOdc_P_1wOEgvDt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </div>
+        </section>
+        <!-- How To Use Section -->
     </main>
     <!-- Main Section -->
 
