--- a/index.html
+++ b/index.html
@@ -268,6 +268,12 @@
             </div>
         </section>
         <!-- How To Use Section -->
+
+        <!-- Uprint Everywhere Section -->
+        <section class="container segment-section">
+            <img class="img-fluid border" src="images/uprint-everywhere.png" alt="">
+        </section>
+        <!-- Uprint Everywhere Section -->
     </main>
     <!-- Main Section -->
 
