uprint everywhere design modified

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
         <!-- Uprint Everywhere Section -->
         <section class="container segment-section">
-            <img class="img-fluid border" src="images/uprint-everywhere.png" alt="">
+            <img class="img-fluid border shadow-lg mb-5 bg-white rounded" src="images/uprint-everywhere.png" alt="">
         </section>
         <!-- Uprint Everywhere Section -->
     </main>
