Uprint assistance info added

--- a/index.html
+++ b/index.html
@@ -274,6 +274,53 @@
             <img class="img-fluid border shadow-lg mb-5 bg-white rounded" src="images/uprint-everywhere.png" alt="">
         </section>
         <!-- Uprint Everywhere Section -->
+
+        <!-- Uprint Assistance Info -->
+        <section class="container segment-section">
+            <div>
+                <div class="card-deck text-center">
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class="card-title">Funded By</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="images/assistances/ict-division.png" class="card-img-top p-5" alt="...">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class="card-title">In Association with</h5>
+                        </div>
+                        <div class="card-body">
+                            <img src="images/assistances/stellar.png" class="card-img-top p-5" alt="...">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <h5 class="card-title">Available on</h5>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://play.google.com/store/apps/details?id=com.stellar.uprint.uprint_app" target="_blank"><img src="images/assistances/play-store.png" class="card-img-top p-5" alt="..."></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="d-flex align-items-center">
+                    <div>
+                        <h5>Funded By</h5>
+                        <img class="img-fluid" src="images/assistances/ict-division.png" alt="">
+                    </div>
+                    <div>
+                        <h5>In Association with</h5>
+                        <img class="img-fluid" src="images/assistances/stellar.png" alt="">
+                    </div>
+                    <div>
+                        <h5>Available on</h5>
+                        <img class="img-fluid" src="images/assistances/play-store.png" alt="">
+                    </div>
+                </div> -->
+            </div>
+        </section>
+        <!-- Uprint Assistance Info -->
     </main>
     <!-- Main Section -->
 
