--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <section class="container segment-section">
             <div>
                 <div class="card-deck text-center">
-                    <div class="card">
+                    <div class="card shadow-lg mb-5 bg-white rounded">
                         <div class="card-header">
                             <h5 class="card-title">Funded By</h5>
                         </div>
@@ -287,7 +287,7 @@
                             <img src="images/assistances/ict-division.png" class="card-img-top p-5" alt="...">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card shadow-lg mb-5 bg-white rounded">
                         <div class="card-header">
                             <h5 class="card-title">In Association with</h5>
                         </div>
@@ -295,7 +295,7 @@
                             <img src="images/assistances/stellar.png" class="card-img-top p-5" alt="...">
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card shadow-lg mb-5 bg-white rounded">
                         <div class="card-header">
                             <h5 class="card-title">Available on</h5>
                         </div>
@@ -304,20 +304,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="d-flex align-items-center">
-                    <div>
-                        <h5>Funded By</h5>
-                        <img class="img-fluid" src="images/assistances/ict-division.png" alt="">
-                    </div>
-                    <div>
-                        <h5>In Association with</h5>
-                        <img class="img-fluid" src="images/assistances/stellar.png" alt="">
-                    </div>
-                    <div>
-                        <h5>Available on</h5>
-                        <img class="img-fluid" src="images/assistances/play-store.png" alt="">
-                    </div>
-                </div> -->
             </div>
         </section>
         <!-- Uprint Assistance Info -->
@@ -325,8 +311,10 @@
     <!-- Main Section -->
 
     <!-- Footer Section -->
-    <footer>
-
+    <footer class="container segment-section">
+        <div>
+            <p class="text-center">Copyright © UprintBD 2023</p>
+        </div>
     </footer>
     <!-- Footer Section -->
 
