--- a/index.html
+++ b/index.html
@@ -311,9 +311,31 @@
     <!-- Main Section -->
 
     <!-- Footer Section -->
-    <footer class="container segment-section">
-        <div>
-            <p class="text-center">Copyright © UprintBD 2023</p>
+    <footer class="container segment-section bg-black text-white p-3">
+        <div class="text-center">
+            <div class="">
+                <div class="row">
+                    <div class=" col p-5">
+                        <i class="fas fa-map-marker-alt fa-2xl"></i>
+                        <p class="mt-3">Location</p>
+                        <span>1005/2/1872 CDA Avenue, 2 No. Gate, Nasirabad, Chittagong</span>
+                    </div>
+                    <div class="col p-5">
+                        <i class="fas fa-envelope-open-text fa-2xl"></i>
+                        <p class="mt-3">Email</p>
+                        <p>contact.uprintbd@gmail.com</p>
+                    </div>
+                    <div class=" col p-5">
+                        <i class="fas fa-phone-square-alt fa-2xl"></i>
+                        <p class="mt-3">Phone</p>
+                        <p>+8801521327804</p>
+                        <p>+8801679636001</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <p>Copyright © UprintBD 2023</p>
+            </div>
         </div>
     </footer>
     <!-- Footer Section -->
